# Laser-Hockey

./: .gitignore  Hockey-Env.ipynb  Notes.md  README.md  autorestart.sh  cluster.sbatch  main.py  pyproject.toml  run_client.py  test.py
bad_checkpoints/: hockey_mpo_disc_overfitting_25-02-05 01_19_58_000065000.pth
experiments/: 001_Flat_First_Demo.ipynb  002_Flat_ddpg_experiment.py  003_Flat_self_play.ipynb  004_categorical.py  005_Flat_Noise.ipynb  006_Flat_MCTS.ipynb  007_Flat_Better_Plots.py  008_Flat_TD_MPC2.ipynb  010_Pfrommer_Plotting.ipynb  ddd.py
final_checkpoints/: tdmpc2-v2-all-i5 25-02-20 17_44_47_000046000.pth  tdmpc2-v2-all-i6 25-02-20 17_44_47_000061500.pth  tdmpc2-v2-all-i7 25-02-20 17_44_47_000067500.pth
good_checkpoints/: 25-02-20 17_44_47_000078000.pth  hockey_mpo_25-01-25 02_11_16_03499.pth  hockey_mpo_disc_25-01-31 20_20_14_18000.pth  hockey_mpo_disc_icm_25-02-12 01_42_52_000090000.pth  sac_epoch=914999-step=2745000.ckpt  sac_self-play.ckpt  tdmpc2-v2-all-i4-weak 25-02-19 09_06_05_000010000.pth  tdmpc2-v2-all-i4.5-unfinished 25-02-20 17_44_47_000011500.pth
hockey/: Hockey-Env.ipynb  README.md  hockey_env.py
hockey/comprl-hockey-agent-main/: README.md  (+1 more)
plots/: eval_mini_tournament.py  eval_mini_tournament_results.tex  eval_tdmc2_hockey_other_env_recover_plots.py  eval_tdmpc2_hockey.py  eval_tdmpc2_hockey_results.tex  eval_tdmpc2_hockey_training.py  eval_tdmpc2_hockey_training_recover_plots.py  eval_tdmpc2_other_env.py  eval_tdmpc2_other_env_pendulum.py
src/: SelfPlayEnv.py  agent.py  config.py  main.py  replaymemory.py  settings.py  test.py
(+41 files in other folders)
