[tool.poetry]
name = "project-rl"
version = "0.1.0"
description = ""
authors = ["Flat <daniel.flat@wps.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "<2"
tueplots = "^0.2.0"
matplotlib = "^3.10.0"
gymnasium = { extras = ["box2d"], version = "^1.1.0" }
pyyaml = "^6.0.2"
scipy = "^1.15.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
